--- a/src/Modal/Cards Template/CardsTemplate.module.css
+++ b/src/Modal/Cards Template/CardsTemplate.module.css
@@ -295,6 +295,7 @@
  
  .addSectionButton {
   padding: 13.5px 16px;
+  margin-top: 24px;
   margin-bottom: 24px;
   border-radius: 12px;
   background: #ffffff;
